@@ -1,3 +1,7 @@
+2008-10-17  Gabor Csardi  <csardi@szaffi>
+
+	* src/igraph_strvector.c (graph_strvector_index) : added	
+
 2008-10-01  Gabor Csardi  <csardi@szaffi>
 
 	* src/blicc.cc (igraph_automorphisms) : fixed a memory leak
